Creates an unmodifiable list now 🏯
OX-10040